--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,10 @@ services:
 
   web:
     build: .
-    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     container_name: wisher_web
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
     ports:
       - "8000:8000"
     depends_on:
@@ -40,22 +38,7 @@ services:
       - web
     env_file:
       - ./frontend/.env
-    command: npm run dev -- --host
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-    depends_on:
-      - web
-      - frontend
 
 volumes:
   postgres_data:
-  static_volume:
-  media_volume:
