--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,15 @@ services:
 
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py collectstatic --noinput &&
+             python manage.py migrate &&
+             gunicorn backend.wsgi:application --bind 0.0.0.0:8000"
     container_name: wisher_web
     volumes:
       - .:/app
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     depends_on:
@@ -28,17 +33,29 @@ services:
   frontend:
     container_name: wisher_frontend
     build:
-      context: ./frontend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      context: .
+      dockerfile: ./frontend/Dockerfile
     ports:
-      - "3000:5173"
+      - "3000:80"
     depends_on:
       - web
     env_file:
       - ./frontend/.env
 
+  nginx:
+    image: nginx:alpine
+    container_name: wisher_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/backend.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
+    depends_on:
+      - web
+
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
