--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,58 +4,42 @@ services:
   db:
     image: postgres:15
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env.prod
 
   web:
     build: .
-    command: >
-      sh -c "python manage.py collectstatic --noinput &&
-             python manage.py migrate &&
-             gunicorn backend.wsgi:application --bind 0.0.0.0:8000"
     container_name: wisher_web
-    volumes:
-      - .:/app
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-    expose:
-      - "8000"
     depends_on:
       - db
+    volumes:
+      - ./static:/app/staticfiles
     env_file:
-      - .env
+      - .env.prod
 
   frontend:
-    container_name: wisher_frontend
+    ports:
+      - "8001:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./static:/static:ro
+      - frontend_dist:/usr/share/nginx/html:ro
     build:
       context: .
       dockerfile: frontend/Dockerfile
-    expose:
-      - "80"
+    container_name: wisher_frontend
     depends_on:
       - web
     env_file:
-      - ./frontend/.env
-
-  nginx:
-    image: nginx:alpine
-    container_name: wisher_nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-    depends_on:
-      - web
-
+      - ./frontend/.env.prod
 
 volumes:
   postgres_data:
-  static_volume:
-  media_volume:
+  frontend_dist:
